--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Youtube Mouse Controlls - settings page</title>
+	<title>ZumaZum Zum Zum</title>
 	<link href="styles/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -11,10 +11,9 @@
 
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h3 class="panel-title">Youtube Mouse Controlls - settings</h3>
+				<h3 class="panel-title">ZumaZum Zum Zum</h3>
 			</div>
 			<div class="panel-body">
-				<div class="alert alert-info"><b>Heads Up!</b> Refresh the youtube page upon changing this settings</div>
 				<form class="form" role="form">
 					<div class="checkbox">
 						<label>
